# rts

./: Cargo.toml  README.md  map.rs
shader/: vert.wgsl
shaders/: File  From.js  Matrix  fragment.wgsl
shaders/difference-of-gaussians/: fragment.wgsl  vertex.wgsl
shaders/dithering/: fragment.wgsl
shaders/edge-direction/: fragment.wgsl
shaders/flow-based-xdog/: fragment.wgsl  vertex.wgsl
shaders/gaussian-blur/: fragment.wgsl
shaders/invert/: fragment.wgsl  vertex.wgsl
shaders/none/: fragment.wgsl
shaders/quantization/: fragment.wgsl  vertex.wgsl
shaders/sobel-edge-detection/: fragment.wgsl  vertex.wgsl
src/: controls.rs  main.rs  scene.rs
